--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -11,28 +10,18 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.LearningApp"
-        android:networkSecurityConfig="@xml/network_security_config"
+        android:theme="@style/Theme.UpdatedSmartLearnApp"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name="ResultActivity"
-            android:exported="false" />
+            android:name=".MainActivity2"
+            android:exported="false"
+            android:theme="@style/Theme.UpdatedSmartLearnApp" />
         <activity
-            android:name="TaskDetailsActivity"
-            android:exported="false" />
-        <activity
-            android:name="TaskActivity"
-            android:exported="false" />
-        <activity
-            android:name="SelectInterestActivity"
-            android:exported="false" />
-        <activity
-            android:name="SignUpActivity"
-            android:exported="false" />
-        <activity
-            android:name="MainActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
